--- a/src/view/.htaccess
+++ b/src/view/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule (.*) connection.php/$1 [L]
+RewriteRule (.*) connection.php [L]
